feat: add the ability to disable currency select icon.