@@ -30,156 +30,207 @@ import java.text.NumberFormat;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 public class GameBuilderGUI {
 
     private final DeluxeCoinflipPlugin plugin;
     private final EconomyManager economyManager;
     private final FileConfiguration config;
-
     private final String GUI_TITLE;
-
     private final boolean BROADCAST_CREATION;
 
     public GameBuilderGUI(DeluxeCoinflipPlugin plugin) {
         this.plugin = plugin;
         this.economyManager = plugin.getEconomyManager();
-        config = plugin.getConfigHandler(ConfigType.CONFIG).getConfig();
+        this.config = plugin.getConfigHandler(ConfigType.CONFIG).getConfig();
         this.GUI_TITLE = ColorUtil.color(config.getString("gamebuilder-gui.title"));
         this.BROADCAST_CREATION = config.getBoolean("settings.broadcast-coinflip-creation");
     }
 
     public void openGameBuilderGUI(Player player, CoinflipGame game) {
-
-        Gui gui = Gui.gui().rows(config.getInt("gamebuilder-gui.rows")).title(Component.text(GUI_TITLE)).create();
+        Gui gui = Gui.gui()
+                .rows(config.getInt("gamebuilder-gui.rows"))
+                .title(Component.text(GUI_TITLE))
+                .create();
 
         gui.setDefaultClickAction(event -> event.setCancelled(true));
 
-        ConfigurationSection fillerItemsSection = config.getConfigurationSection("gamebuilder-gui.filler-items");
-        if (fillerItemsSection != null) {
-            for (String entry : fillerItemsSection.getKeys(false)) {
-                ItemStackBuilder builder = ItemStackBuilder.getItemStack(config.getConfigurationSection(fillerItemsSection.getCurrentPath() + "." + entry));
+        setFillerItems(gui);
+        setupCurrencySelector(gui, player, game);
+        setupAmountItems(gui, player, game);
+        setupCustomAmount(gui, player, game);
+        setupCreateGame(gui, player, game);
 
-                if (config.contains(fillerItemsSection.getCurrentPath() + "." + entry + ".slots")) {
-                    for (String slot : config.getStringList(fillerItemsSection.getCurrentPath() + "." + entry + ".slots")) {
-                        gui.setItem(Integer.parseInt(slot), new GuiItem(builder.build()));
-                    }
-                } else if (config.contains(fillerItemsSection.getCurrentPath() + "." + entry + ".slot")) {
-                    int slot = config.getInt(fillerItemsSection.getCurrentPath() + "." + entry + ".slot");
-                    gui.setItem(slot, new GuiItem(builder.build()));
-                }
+        plugin.getScheduler().runTaskAtEntity(player, () -> gui.open(player));
+    }
+
+    private void setFillerItems(Gui gui) {
+        ConfigurationSection section = config.getConfigurationSection("gamebuilder-gui.filler-items");
+        if (section == null) return;
+
+        for (String key : section.getKeys(false)) {
+            ConfigurationSection itemSection = section.getConfigurationSection(key);
+            if (itemSection == null) continue;
+
+            ItemStack item = ItemStackBuilder.getItemStack(itemSection).build();
+            List<Integer> slots = getSlots(itemSection);
+            for (int slot : slots) {
+                gui.setItem(slot, new GuiItem(item));
             }
         }
+    }
 
-        GuiItem currencySelectItem = new GuiItem(ItemStackBuilder.getItemStack(config.getConfigurationSection("gamebuilder-gui.currency-select"))
-                .withLore(getCurrencyLore(config.getConfigurationSection("gamebuilder-gui.currency-select"), game))
-                .build());
-        gui.setItem(config.getInt("gamebuilder-gui.currency-select.slot"), currencySelectItem);
-        currencySelectItem.setAction(event -> {
-            String nextProvider = getNext(game.getProvider());
-            game.setProvider(nextProvider);
-            currencySelectItem.setItemStack(new ItemStackBuilder(currencySelectItem.getItemStack()).withLore(getCurrencyLore(config.getConfigurationSection("gamebuilder-gui.currency-select"), game)).build());
-            gui.update();
+    private void setupCurrencySelector(Gui gui, Player player, CoinflipGame game) {
+        ConfigurationSection section = config.getConfigurationSection("gamebuilder-gui.currency-select");
+        if (section == null || !section.getBoolean("enabled", true)) return;
+
+        int slot = section.getInt("slot");
+        ItemStack item = ItemStackBuilder.getItemStack(section)
+                .withLore(getCurrencyLore(section, game))
+                .build();
+
+        GuiItem guiItem = new GuiItem(item);
+        guiItem.setAction(event -> {
+            game.setProvider(getNext(game.getProvider()));
+            ItemStack updated = new ItemStackBuilder(guiItem.getItemStack())
+                    .withLore(getCurrencyLore(section, game))
+                    .build();
+            guiItem.setItemStack(updated);
             player.playSound(player.getLocation(), Sound.ENTITY_CHICKEN_EGG, 1L, 0L);
+            gui.update();
         });
 
-        ConfigurationSection amountItemsSection = config.getConfigurationSection("gamebuilder-gui.amount-items");
-        if (amountItemsSection != null) {
-            for (String entry : amountItemsSection.getKeys(false)) {
-                GuiItem guiItem = new GuiItem(ItemStackBuilder.getItemStack(config.getConfigurationSection(amountItemsSection.getCurrentPath() + "." + entry)).build());
+        gui.setItem(slot, guiItem);
+    }
 
-                String setAmount = config.getString(amountItemsSection.getCurrentPath() + "." + entry + ".set_amount");
-                guiItem.setAction(event -> {
+    private void setupAmountItems(Gui gui, Player player, CoinflipGame game) {
+        ConfigurationSection section = config.getConfigurationSection("gamebuilder-gui.amount-items");
+        if (section == null) return;
+
+        for (String key : section.getKeys(false)) {
+            ConfigurationSection itemSection = section.getConfigurationSection(key);
+            if (itemSection == null) continue;
+
+            ItemStack item = ItemStackBuilder.getItemStack(itemSection).build();
+            String setAmount = itemSection.getString("set_amount");
+            int slot = itemSection.getInt("slot");
+
+            GuiItem guiItem = new GuiItem(item);
+            guiItem.setAction(event -> {
+                if (setAmount != null) {
+                    long delta = Long.parseLong(setAmount.replaceAll("[^0-9]", ""));
                     if (setAmount.startsWith("+")) {
-                        game.setAmount(game.getAmount() + Long.parseLong(setAmount.replace("+", "")));
-                        player.playSound(player.getLocation(), Sound.BLOCK_TRIPWIRE_CLICK_ON, 5L, 0L);
+                        game.setAmount(game.getAmount() + delta);
                     } else if (setAmount.startsWith("-")) {
-                        game.setAmount(game.getAmount() - Long.parseLong(setAmount.replace("-", "")));
-                        player.playSound(player.getLocation(), Sound.BLOCK_TRIPWIRE_CLICK_ON, 1L, 0L);
+                        game.setAmount(game.getAmount() - delta);
                     }
-                    currencySelectItem.setItemStack(new ItemStackBuilder(currencySelectItem.getItemStack()).withLore(getCurrencyLore(config.getConfigurationSection("gamebuilder-gui.currency-select"), game)).build());
+                    player.playSound(player.getLocation(), Sound.BLOCK_TRIPWIRE_CLICK_ON, 5L, 0L);
                     gui.update();
-                });
-                gui.setItem(config.getInt(amountItemsSection.getCurrentPath() + "." + entry + ".slot"), guiItem);
-            }
+                }
+            });
+
+            gui.setItem(slot, guiItem);
         }
+    }
 
-        gui.setItem(config.getInt("gamebuilder-gui.custom-amount.slot"), new GuiItem(ItemStackBuilder.getItemStack(config.getConfigurationSection("gamebuilder-gui.custom-amount"))
-                .build(), event -> {
-            gui.close(player);
-            plugin.getListenerCache().put(player.getUniqueId(), game);
-            Messages.ENTER_VALUE_FOR_GAME.send(player, "{MIN_BET}", TextUtil.numberFormat(config.getLong("settings.minimum-bet")), "{MAX_BET}", TextUtil.numberFormat(config.getLong("settings.maximum-bet")));
-        }));
+    private void setupCustomAmount(Gui gui, Player player, CoinflipGame game) {
+        ConfigurationSection section = config.getConfigurationSection("gamebuilder-gui.custom-amount");
+        if (section == null) return;
 
-        gui.setItem(config.getInt("gamebuilder-gui.create-game.slot"), new GuiItem(ItemStackBuilder.getItemStack(config.getConfigurationSection("gamebuilder-gui.create-game"))
-                .build(), event -> {
+        GuiItem item = new GuiItem(
+                ItemStackBuilder.getItemStack(section).build(),
+                event -> {
+                    gui.close(player);
+                    plugin.getListenerCache().put(player.getUniqueId(), game);
+                    Messages.ENTER_VALUE_FOR_GAME.send(player,
+                            "{MIN_BET}", TextUtil.numberFormat(config.getLong("settings.minimum-bet")),
+                            "{MAX_BET}", TextUtil.numberFormat(config.getLong("settings.maximum-bet")));
+                });
+
+        gui.setItem(section.getInt("slot"), item);
+    }
+
+    private void setupCreateGame(Gui gui, Player player, CoinflipGame game) {
+        ConfigurationSection section = config.getConfigurationSection("gamebuilder-gui.create-game");
+        if (section == null) return;
+
+        GuiItem item = new GuiItem(ItemStackBuilder.getItemStack(section).build(), event -> {
             EconomyProvider provider = economyManager.getEconomyProvider(game.getProvider());
-
 
             if (plugin.getGameManager().getCoinflipGames().containsKey(player.getUniqueId())) {
                 handleError(player, event, "gamebuilder-gui.error-game-exists");
                 return;
             }
 
-            long gameAmount = game.getAmount();
-            long minBet = config.getLong("settings.minimum-bet");
-            long maxBet = config.getLong("settings.maximum-bet");
+            long amount = game.getAmount();
+            long min = config.getLong("settings.minimum-bet");
+            long max = config.getLong("settings.maximum-bet");
 
-            if (gameAmount < minBet || gameAmount > maxBet) {
+            if (amount < min || amount > max) {
                 handleError(player, event, "gamebuilder-gui.error-limits");
                 return;
             }
 
-            // Ensure the user has the correct balance for the game.
-            if (gameAmount > provider.getBalance(player)) {
+            if (amount > provider.getBalance(player)) {
                 handleError(player, event, "gamebuilder-gui.error-no-funds");
                 return;
             }
 
             plugin.getScheduler().runTaskAtEntity(player, () -> gui.close(player));
 
-            final CoinflipCreatedEvent createdEvent = new CoinflipCreatedEvent(player, game);
+            CoinflipCreatedEvent createdEvent = new CoinflipCreatedEvent(player, game);
             Bukkit.getPluginManager().callEvent(createdEvent);
             if (createdEvent.isCancelled()) return;
 
-            provider.withdraw(player, game.getAmount());
+            provider.withdraw(player, amount);
             plugin.getGameManager().addCoinflipGame(player.getUniqueId(), game.clone());
 
-            String amountFormatted = NumberFormat.getNumberInstance(Locale.US).format(game.getAmount());
+            String formatted = NumberFormat.getNumberInstance(Locale.US).format(amount);
 
             if (BROADCAST_CREATION) {
-                Messages.COINFLIP_CREATED_BROADCAST.broadcast("{PLAYER}", player.getName(), "{CURRENCY}", provider.getDisplayName(), "{AMOUNT}", amountFormatted);
+                Messages.COINFLIP_CREATED_BROADCAST.broadcast("{PLAYER}", player.getName(), "{CURRENCY}", provider.getDisplayName(), "{AMOUNT}", formatted);
             }
 
-            Messages.CREATED_GAME.send(player, "{AMOUNT}", amountFormatted, "{CURRENCY}", provider.getDisplayName());
-        }));
+            Messages.CREATED_GAME.send(player, "{AMOUNT}", formatted, "{CURRENCY}", provider.getDisplayName());
+        });
 
-        plugin.getScheduler().runTaskAtEntity(player, () -> gui.open(player));
+        gui.setItem(section.getInt("slot"), item);
     }
 
     private List<String> getCurrencyLore(ConfigurationSection section, CoinflipGame game) {
-        List<String> lore = section.getStringList("lore-header").stream().map(line -> line.replace("{BET_AMOUNT}", TextUtil.numberFormat(game.getAmount()))).collect(Collectors.toList());
+        List<String> lore = new ArrayList<>(section.getStringList("lore-header").stream()
+                .map(line -> line.replace("{BET_AMOUNT}", TextUtil.numberFormat(game.getAmount())))
+                .toList());
 
         for (EconomyProvider provider : economyManager.getEconomyProviders().values()) {
-            if (game.getProvider().equals(provider.getIdentifier().toUpperCase())) {
-                lore.add(section.getString("currency_lore_selected").replace("{CURRENCY}", provider.getDisplayName()));
-            } else {
-                lore.add(section.getString("currency_lore_unselected").replace("{CURRENCY}", provider.getDisplayName()));
-            }
+            String display = provider.getDisplayName();
+            String line = game.getProvider().equalsIgnoreCase(provider.getIdentifier())
+                    ? section.getString("currency_lore_selected")
+                    : section.getString("currency_lore_unselected");
+
+            lore.add(line.replace("{CURRENCY}", display));
         }
+
         lore.addAll(section.getStringList("lore-footer"));
         return lore;
     }
 
-    private String getNext(String provider) {
-        List<String> providers = new ArrayList<>(economyManager.getEconomyProviders().keySet());
-        int i = providers.indexOf(provider);
-        try {
-            return providers.get(i + 1);
-        } catch (IndexOutOfBoundsException e) {
-            return economyManager.getEconomyProviders().keySet().stream().findFirst().get();
+    private List<Integer> getSlots(ConfigurationSection section) {
+        List<Integer> slots = new ArrayList<>();
+        if (section.contains("slots")) {
+            for (String s : section.getStringList("slots")) {
+                slots.add(Integer.parseInt(s));
+            }
+        } else if (section.contains("slot")) {
+            slots.add(section.getInt("slot"));
         }
+        return slots;
+    }
+
+    private String getNext(String current) {
+        List<String> keys = new ArrayList<>(economyManager.getEconomyProviders().keySet());
+        int index = keys.indexOf(current);
+        return keys.get((index + 1) % keys.size());
     }
 
     /**
@@ -191,10 +242,11 @@ public class GameBuilderGUI {
      * @param configPath The configuration path for the error item.
      */
     private void handleError(Player player, InventoryClickEvent event, String configPath) {
-        ItemStack previousItem = event.getCurrentItem();
+        ItemStack original = event.getCurrentItem();
         player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 1L, 0L);
         event.getClickedInventory().setItem(event.getSlot(),
                 ItemStackBuilder.getItemStack(config.getConfigurationSection(configPath)).build());
-        plugin.getScheduler().runTaskLater(() -> event.getClickedInventory().setItem(event.getSlot(), previousItem), 45L);
+        plugin.getScheduler().runTaskLater(() -> event.getClickedInventory().setItem(event.getSlot(), original), 45L);
     }
 }
+
